fix: news names instruments

--- a/index.html
+++ b/index.html
@@ -118,16 +118,12 @@
           <button class="toggle-btn">↕</button>
           <div id="desUniversal" class="instruments">
             <div>
-              <a href="partitura_clarinete1.pdf" download>Base PDF</a>
-              <a href="partitura_clarinete1.sib" download>Base SIB</a>
-            </div>
-            <div>
-              <a href="partitura_clarinete1.pdf" download>Bateria PDF</a>
-              <a href="partitura_clarinete1.sib" download>Bateria SIB</a>
-            </div>
-            <div>
-              <a href="partitura_clarinete1.pdf" download>Baixo E PDF</a>
-              <a href="partitura_clarinete1.sib" download>Baixo E SIB</a>
+              <a
+                href="https://drive.google.com/file/d/1F2lcARxK_ppd6PWlrQ6yrFWOrqb-1rrd/view?usp=sharing"
+                download
+                >Baixo PDF</a
+              >
+              <a href="partitura_baixo.sib" download>Baixo SIB</a>
             </div>
             <div>
               <a
@@ -135,7 +131,23 @@
                 download
                 >Bombardino PDF</a
               >
-              <a href="partitura_clarinete1.sib" download>Baixo E SIB</a>
+              <a href="partitura_bombardino.sib" download>Bombardino SIB</a>
+            </div>
+            <div>
+              <a
+                href="https://drive.google.com/file/d/1cB8eR44hHTGbH3Aniuds3utTTLcrOu2H/view?usp=sharing"
+                download
+                >Bumbo PDF</a
+              >
+              <a href="partitura_bumbo.sib" download>Bumbo SIB</a>
+            </div>
+            <div>
+              <a
+                href="https://drive.google.com/file/d/1h2mNcTl2UGsEL7kAa1WwhgY3Hyp9To96/view?usp=sharing"
+                download
+                >Caixa PDF</a
+              >
+              <a href="partitura_caixa.sib" download>Caixa SIB</a>
             </div>
             <div>
               <a
@@ -163,59 +175,77 @@
             </div>
             <div>
               <a
+                href="https://drive.google.com/file/d/1NHSf_O6zQdf4l2PUgH3MunYeycE9Scai/view?usp=sharing"
+                download
+                >Clarone PDF</a
+              >
+              <a href="partitura_clarone.sib" download>Clarone SIB</a>
+            </div>
+            <div>
+              <a
+                href="https://drive.google.com/file/d/18eN2agGWJcOXE9wVHuBZdFAvEdM9MFIn/view?usp=sharing"
+                download
+                >Coro PDF</a
+              >
+              <a href="partitura_coro.sib" download>Coro SIB</a>
+            </div>
+            <div>
+              <a
                 href="https://drive.google.com/file/d/1_K49PYzKMQTU_Ep-2qQNXccmqC2QlvzN/view?usp=sharing"
                 download
                 >Flauta PDF</a
               >
-              <a href="partitura_clarinete3.sib" download>Flauta SIB</a>
-            </div>
-            <div>
-              <a href="partitura_clarinete3.pdf" download>Lira PDF</a>
-              <a href="partitura_clarinete3.sib" download>Lira SIB</a>
-            </div>
-            <div>
-              <a href="partitura_trompa.pdf" download>Trompa PDF</a>
-              <a href="partitura_trompa.sib" download>Trompa SIB</a>
-            </div>
-            <div>
-              <a href="partitura_trompa.pdf" download>1º Sax Alto PDF</a>
-              <a href="partitura_trompa.sib" download>1º Sax Alto SIB</a>
-            </div>
-            <div>
-              <a href="partitura_trompa.pdf" download>3º Sax Alto PDF</a>
-              <a href="partitura_trompa.sib" download>3º Sax Alto SIB</a>
+              <a href="partitura_flauta.sib" download>Flauta SIB</a>
             </div>
             <div>
               <a
-                href="https://drive.google.com/file/d/1NL--e_qj8_22RPS7rS9IiJCFC4ujhN3v/view?usp=sharing"
+                href="https://drive.google.com/file/d/1t1RevNr4ROyVLI8Og1-ZeY962PW9kKCS/view?usp=sharing"
                 download
-                >1º Sax Tenor PDF</a
+                >Flautim PDF</a
               >
-              <a href="partitura_trompa.sib" download>1º Sax Tenor SIB</a>
+              <a href="partitura_flautim.sib" download>Flautim SIB</a>
             </div>
             <div>
               <a
-                href="https://drive.google.com/file/d/1Yyf0Aqb2K5vkcyWLzwzFtxrL5s0m5h2M/view?usp=sharing"
+                href="https://drive.google.com/file/d/1ta5KIV0IiQAhJEp1ImBFr8P8kzuJJU8N/view?usp=sharing"
                 download
-                >2º Sax Tenor PDF</a
+                >Piano PDF</a
               >
-              <a href="partitura_trompa.sib" download>2º Sax Tenor SIB</a>
+              <a href="partitura_piano.sib" download>Piano SIB</a>
             </div>
             <div>
-              <a href="partitura_trompa.pdf" download>1º Trombone PDF</a>
+              <a
+                href="https://drive.google.com/file/d/1sbEtcIKsfwrkiiSoIV_QSS4GgdW4RzST/view?usp=sharing"
+                download
+                >Prato S PDF</a
+              >
+              <a href="partitura_pratosuspensotrompa.sib" download
+                >Prato S SIB</a
+              >
+            </div>
+            <div>
+              <a
+                href="https://drive.google.com/file/d/1AhXvUHaDTgIUfxYQADuHasex2_O9V-j3/view?usp=sharing"
+                download
+                >1º Trombone PDF</a
+              >
               <a href="partitura_trompa.sib" download>1º Trombone SIB</a>
             </div>
             <div>
-              <a href="partitura_trompa.pdf" download>2º Trombone PDF</a>
+              <a
+                href="https://drive.google.com/file/d/11GXQJg2eDJOM-mFiM2ujnjl00RzdD_xr/view?usp=sharing"
+                download
+                >2º Trombone PDF</a
+              >
               <a href="partitura_trompa.sib" download>2º Trombone SIB</a>
             </div>
             <div>
-              <a href="partitura_trompa.pdf" download>3º Trombone PDF</a>
-              <a href="partitura_trompa.sib" download>3º Trombone SIB</a>
-            </div>
-            <div>
-              <a href="partitura_trompa.pdf" download>4º Trombone PDF</a>
-              <a href="partitura_trompa.sib" download>4º Trombone SIB</a>
+              <a
+                href="https://drive.google.com/file/d/140MMnHSsvjq0IAgk05e2fn585oS_89Ix/view?usp=sharing"
+                download
+                >3º Trombone PDF</a
+              >
+              <a href="https://drive.google.com/file/d/140MMnHSsvjq0IAgk05e2fn585oS_89Ix/view?usp=sharing" download>3º Trombone SIB</a>
             </div>
             <div>
               <a href="partitura_trompa.pdf" download>1º Trompete PDF</a>
